--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Green Velley Kamrunag</title>
-  <link rel="stylesheet" href="Upper.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -84,4 +84,5 @@
 
 </body>
 </html>
+
 
